--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,6 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .search {
-  margin-top: 4em;
-  margin-bottom: 4em;
+  margin-top: 3em;
+  margin-bottom: 6em;
 }
